--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700;900&display=swap');
 
 :root {
   --size1: 2px;
@@ -15,16 +16,17 @@
   --scheme1--4: #d8dbd4;
 
   --scheme2--1: #e5e5e5;
-  --scheme2--2: #efcc32;
+  --scheme2--2: #ffa502;
   --scheme2--3: #725238;
   --scheme2--4: #4c683e;
   --scheme2--5: #c52624;
   --scheme2--6: #bdbdbf;
   --scheme2--7: #3f3f3f;
+  --scheme2--8: #747d8c;
 }
 
 body {
-  font-family: 'Oxanium', monospace;
+  font-family: 'Libre Franklin';
   padding: var(--size6);
   display: flex;
   flex-direction: column;
@@ -36,9 +38,13 @@ body {
   margin: 0 auto;
 }
 
+h1 {
+  font-family: 'Libre Franklin';
+}
+
 .button {
   background-color: whitesmoke;
-  border-radius: 20px;
+  border-radius: 50px;
   border: 1px solid lightgrey;
   display: inline-block;
   cursor: pointer;
@@ -66,16 +72,18 @@ body {
   background-color: var(--scheme2--5);
   color: whitesmoke;
   border: 1px solid lightgrey;
+  font-family: 'Libre Franklin';
 }
 
 #equals {
   background-color: var(--scheme2--2);
   color: var(--scheme2--7);
   border: 1px solid lightgrey;
+  font-family: 'Libre Franklin';
 }
 
 #calculator-frame {
-  height: 450px;
+  height: 400px;
   width: 350px;
   border-radius: 5px;
   background-color: var(--scheme2--1);
@@ -86,8 +94,6 @@ body {
 }
 
 #calculator-face {
-  height: 350px;
-  width: 90%;
   display: grid;
   grid-template-areas:
     'display display display display'
@@ -109,10 +115,11 @@ body {
   font-size: 25px;
   font-weight: 200;
   height: 50px;
-  background-color: #719f22;
+  /* background-color: #719f22; */
+  background-color: #3f3f3f;
   color: whitesmoke;
-  border: 15px solid var(--scheme2--6);
-  border-radius: 10px;
+  /* border: 8px solid var(--scheme2--6);
+  border-radius: 2px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
