--- a/src/style.css
+++ b/src/style.css
@@ -1,97 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200;300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700;900&display=swap');
-
-:root {
-  --size1: 2px;
-  --size2: 4px;
-  --size3: 6px;
-  --size4: 8px;
-  --size5: 10px;
-  --size6: 14px;
-  --size7: 18px;
-  --size8: 20px;
-  --scheme1--1: #ff6138;
-  --scheme1--2: #eaede7;
-  --scheme1--3: #bab4a1;
-  --scheme1--4: #d8dbd4;
-
-  --scheme2--1: #e5e5e5;
-  --scheme2--2: #ffa502;
-  --scheme2--3: #725238;
-  --scheme2--4: #4c683e;
-  --scheme2--5: #c52624;
-  --scheme2--6: #bdbdbf;
-  --scheme2--7: #3f3f3f;
-  --scheme2--8: #747d8c;
-}
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap');
 
 body {
   font-family: 'Libre Franklin';
-  padding: var(--size6);
+  background-color: #d8dbd4;
+  margin: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
+  justify-content: center;
   box-sizing: border-box;
-  width: 400px;
-  margin: 0 auto;
 }
 
 h1 {
   font-family: 'Libre Franklin';
+  font-size: 36px;
+  text-align: center;
+  color: #111;
 }
 
 .button {
-  background-color: whitesmoke;
-  border-radius: 50px;
-  border: 1px solid lightgrey;
-  display: inline-block;
+  background-color: #323232;
+  color: whitesmoke;
+  border: none;
+  border-radius: 50%;
   cursor: pointer;
-  color: var(--scheme2--7);
-  font-family: Arial;
-  font-size: 20px;
-  padding: 16px 31px;
-  text-decoration: none;
-  text-align: center;
+  margin: 5px;
+  height: 50px;
+  width: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Manrope';
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .button:hover {
-  background-color: #5cbf2a;
+  opacity: 0.9;
 }
 .button:active {
   position: relative;
   top: 1px;
 }
-/*  BUTTON EXCEPTIONS  */
+
+.button:focus {
+  outline: none;
+}
 
 #clear {
-  background-color: var(--scheme2--5);
+  background-color: #c52624;
   color: whitesmoke;
-  border: 1px solid lightgrey;
-  font-family: 'Libre Franklin';
+}
+
+#equals,
+#divide,
+#add,
+#subtract,
+#multiply {
+  background-color: #ffa502;
+  color: whitesmoke;
+}
+
+#clear,
+#zero {
+  width: auto;
+  border-radius: 25px;
 }
 
 #equals {
-  background-color: var(--scheme2--2);
-  color: var(--scheme2--7);
-  border: 1px solid lightgrey;
-  font-family: 'Libre Franklin';
+  height: auto;
+  border-radius: 25px;
+  background-color: #a5a5a5;
+  color: #111;
 }
+/* THE ENTIRE THING */
 
 #calculator-frame {
-  height: 400px;
-  width: 350px;
-  border-radius: 5px;
-  background-color: var(--scheme2--1);
+  background-color: #111;
   display: flex;
+  flex-wrap: wrap;
+  padding: 5px;
+  height: 400px;
+  width: 300px;
+  border-radius: 5px;
   flex-direction: column;
   align-items: center;
   align-content: center;
 }
+
+/* DAS FACE */
 
 #calculator-face {
   display: grid;
@@ -104,26 +103,17 @@ h1 {
     'zero zero decimal equals';
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
-  grid-gap: 5px;
+  /* grid-gap: 1px; */
+  width: 90%;
 }
-
-/* SCREEN */
 
 #display {
   grid-area: display;
-  text-transform: uppercase;
-  font-size: 25px;
-  font-weight: 200;
-  height: 50px;
-  /* background-color: #719f22; */
-  background-color: #3f3f3f;
-  color: whitesmoke;
-  /* border: 8px solid var(--scheme2--6);
-  border-radius: 2px; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-  margin: 20px 0 5px 0;
-  padding-right: 10px;
+  color: #fff;
+  font-size: 30px;
+  position: relative;
+  margin: 20px 15px;
+  text-align: right;
+  width: 90%;
+  font-family: 'Manrope';
 }
